[workspace]
resolver = "3"
members = [
  "bench",
  "build",
  "cmd/compile",
  "cmd/decode",
  "cmd/interpret",
  "cmd/minify",
  "cmd/profile",
  "cmd/repl",
  "compiler",
  "configuration",
  "device",
  "dynamic",
  "engine",
  "examples/custom-vm",
  "examples/embedded-script",
  "examples/hot-reload",
  "examples/no-std-no-alloc",
  "file",
  "inexact",
  "libc",
  "macro",
  "macro-util",
  "minifier",
  "minifier_macro",
  "module",
  "native",
  "process_context",
  "profiler",
  "r7rs",
  "root",
  "sac",
  "time",
  "util",
  "vm",
  "wasm",
]

[workspace.package]
version = "0.10.34"
edition = "2024"
readme = "README.md"
repository = "https://github.com/raviqqe/stak"
license-file = "LICENSE"
keywords = ["interpreter", "language", "scheme"]
categories = ["compilers", "no-std", "no-std::no-alloc", "wasm"]

[workspace.lints.clippy]
alloc_instead_of_core = "deny"
cargo = "deny"
complexity = "deny"
correctness = "deny"
dbg_macro = "deny"
derive_partial_eq_without_eq = "deny"
equatable_if_let = "deny"
explicit_deref_methods = "deny"
if_not_else = "deny"
manual_let_else = "deny"
missing_const_for_fn = "deny"
missing_panics_doc = "deny"
multiple_crate_versions = { level = "allow", priority = 1 }
option_if_let_else = "deny"
perf = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
style = "deny"
suspicious = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
uninlined_format_args = "deny"
unnecessary_safety_comment = "deny"
unused_self = "deny"
use_self = "deny"

[workspace.lints.rust]
missing_docs = "deny"
warnings = "deny"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
debug-assertions = false
overflow-checks = false

[profile.release_test]
inherits = "release"
debug = "line-tables-only"
debug-assertions = true
overflow-checks = true

[profile.release_test.build-override]
opt-level = 3
debug-assertions = false
overflow-checks = false

[profile.dev.build-override]
opt-level = 3
debug-assertions = false
overflow-checks = false
