[package]
name = "stak-async"
description = "Asynchronous context for Stak Scheme"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }

[lints]
workspace = true
