[package]
name = "stak-async"
description = "Asynchronous context for Stak Scheme"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
allocator-api2 = "0.2.21"
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
stak-vm = { version = "0.10.17", path = "../vm" }

[lints]
workspace = true
