[package]
name = "stak-bench"
version.workspace = true
edition.workspace = true
publish = false

[[bench]]
harness = false
name = "main"

[[bench]]
harness = false
name = "embed"

[dependencies]
mlua = { version = "0.11.3", features = ["lua54"] }
stak = { workspace = true }
stak-compiler = { workspace = true }

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "2.7.2" }

[build-dependencies]
stak-build = { workspace = true }

[lints]
workspace = true
