[package]
name = "stak-bench"
version.workspace = true
edition.workspace = true
publish = false

[[bench]]
harness = false
name = "main"

[[bench]]
harness = false
name = "embed"

[dependencies]
mlua = { version = "0.11.4", features = ["lua54"] }
stak = { path = "../root", version = "0.11.6" }
stak-compiler = { path = "../compiler", version = "0.11.6" }

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "2.7.2" }

[build-dependencies]
stak-build = { path = "../build", version = "0.11.6" }

[lints]
workspace = true
