[package]
name = "stak-code"
description = "Bytecode encoding/decoding for Stak Scheme"
version = "0.2.56"
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[features]
alloc = []

[dev-dependencies]
insta = "1.40.0"
pretty_assertions = "1.4.0"

[lints]
workspace = true
