[package]
name = "stak-code"
description = "Bytecode encoding/decoding for Stak Scheme"
version = "0.2.69"
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[features]
alloc = []

[dev-dependencies]
insta = "1.41.1"
pretty_assertions = "1.4.1"

[lints]
workspace = true
