[package]
name = "stak-compile"
description = "Stak bytecode compiler"
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
device = { package = "stak-device", version = "0.1", path = "../device", features = ["std"] }
primitive = { package = "stak-primitive", version = "0.1", path = "../primitive", features = ["std"] }
proc-macro2 = "1.0.75"
quote = "1.0.35"
syn = "2.0.48"
vm = { package = "stak-vm", version = "0.2", path = "../vm", features = ["std"] }
