[package]
name = "stak-compile"
description = "Stak Scheme bytecode compiler"
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
stak-device = { version = "0.1", path = "../device", features = ["std"] }
stak-primitive = { version = "0.1", path = "../primitive", features = ["std"] }
stak-vm = { version = "0.2", path = "../vm", features = ["std"] }
