[package]
name = "stak-compiler"
version.workspace = true
edition.workspace = true
description = "Stak Scheme bytecode compiler"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
stak-configuration = { path = "../configuration", version = "0.12.5" }
stak-device = { path = "../device", version = "0.12.5", features = ["std"] }
stak-file = { path = "../file", version = "0.12.5" }
stak-process-context = { path = "../process-context", version = "0.12.5" }
stak-r7rs = { path = "../r7rs", version = "0.12.5" }
stak-time = { path = "../time", version = "0.12.5" }
stak-vm = { path = "../vm", version = "0.12.5" }

[dev-dependencies]
indoc = "2.0.7"

[features]
async = [
  "stak-device/async",
  "stak-file/async",
  "stak-process-context/async",
  "stak-r7rs/async",
  "stak-time/async",
  "stak-vm/async",
]

[lints]
workspace = true
