[package]
name = "stak-decode"
description = "Stak Scheme bytecode decoder"
version = "0.1.2"
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
code = { package = "stak-code", path = "../code", features = ["alloc", "std"] }
