[package]
name = "stak-device"
description = "Devices for Stak Scheme"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
async = ["stak-vm/async", "winter-maybe-async/async"]
libc = ["dep:rustix"]
std = []

[dependencies]
rustix = { version = "1.0.7", default-features = false, features = [
  "stdio",
], optional = true }
stak-vm = { version = "0.10.26", path = "../vm" }
winter-maybe-async = "0.12.0"

[dev-dependencies]
stak-util = { path = "../util" }

[lints]
workspace = true
