[package]
name = "stak-device"
version.workspace = true
edition.workspace = true
description = "Devices for Stak Scheme"
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rustix = { version = "1.0.8", default-features = false, features = [
  "stdio",
], optional = true }
stak-vm = { version = "0.10.36", path = "../vm" }
winter-maybe-async = "0.13.1"

[dev-dependencies]
stak-util = { path = "../util" }

[features]
async = ["stak-vm/async", "winter-maybe-async/async"]
libc = ["dep:rustix"]
std = []

[lints]
workspace = true
