[package]
name = "stak-engine"
version.workspace = true
edition.workspace = true
description = "Stak Scheme scripting engine for Rust"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
any-fn = "0.6.3"
cfg-elif = "0.6.5"
stak-device = { workspace = true }
stak-dynamic = { workspace = true }
stak-file = { workspace = true }
stak-module = { workspace = true }
stak-process-context = { workspace = true }
stak-r7rs = { workspace = true }
stak-time = { workspace = true }
stak-util = { workspace = true }
stak-vm = { workspace = true }
winter-maybe-async = "0.13.1"

[dev-dependencies]
rand = "0.9.2"
stak = { workspace = true }

[build-dependencies]
stak-build = { workspace = true }

[features]
async = [
  "stak-device/async",
  "stak-file/async",
  "stak-process-context/async",
  "stak-r7rs/async",
  "stak-time/async",
  "stak-vm/async",
  "winter-maybe-async/async",
]
libc = ["stak-device/libc"]
std = ["stak-device/std"]

[lints]
workspace = true
