[package]
name = "stak-engine"
version.workspace = true
edition.workspace = true
description = "Stak Scheme scripting engine for Rust"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
any-fn = "0.6.3"
cfg-elif = "0.6.5"
stak-device = { path = "../device", version = "0.12.6" }
stak-dynamic = { path = "../dynamic", version = "0.12.6" }
stak-file = { path = "../file", version = "0.12.6" }
stak-module = { path = "../module", version = "0.12.6" }
stak-process-context = { path = "../process-context", version = "0.12.6" }
stak-r7rs = { path = "../r7rs", version = "0.12.6" }
stak-time = { path = "../time", version = "0.12.6" }
stak-util = { path = "../util", version = "0.12.6" }
stak-vm = { path = "../vm", version = "0.12.6" }
winter-maybe-async = "0.13.1"

[dev-dependencies]
rand = "0.9.2"
stak = { path = "../root" }

[build-dependencies]
stak-build = { path = "../build", version = "0.12.6" }

[features]
async = [
  "stak-device/async",
  "stak-file/async",
  "stak-process-context/async",
  "stak-r7rs/async",
  "stak-time/async",
  "stak-vm/async",
  "winter-maybe-async/async",
]
libc = ["stak-device/libc"]
std = ["stak-device/std"]

[lints]
workspace = true
