[package]
name = "stak-file"
version.workspace = true
edition.workspace = true
description = "File system for Stak Scheme"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
heapless = { version = "0.9.2", default-features = false }
rustix = { version = "1.1.2", default-features = false, features = [
  "fs",
], optional = true }
stak-vm = { path = "../vm", version = "0.12.1" }
winter-maybe-async = "0.13.1"

[dev-dependencies]
tempfile = "3.23.0"

[features]
async = ["stak-vm/async", "winter-maybe-async/async"]
libc = ["dep:rustix"]
std = []

[lints]
workspace = true
