[package]
name = "stak-inexact"
description = "Inexact number operations for Stak Scheme"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
async = ["stak-vm/async", "winter-maybe-async/async"]

[dependencies]
libm = { version = "0.2.15", default-features = false }
stak-vm = { version = "0.10.30", path = "../vm" }
winter-maybe-async = "0.13.0"

[lints]
workspace = true
