[package]
name = "stak-libc"
version.workspace = true
edition.workspace = true
description = "Stak Scheme libc utilities"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
libc = { version = "0.2.177", default-features = false }
rustix = { version = "1.1.2", default-features = false, features = [
  "fs",
  "mm",
] }

[lints]
workspace = true
