[package]
name = "stak-libc"
version.workspace = true
edition.workspace = true
description = "Stak Scheme libc utilities"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rustix = { version = "1.1.2", default-features = false, features = [
  "fs",
  "mm",
] }
stak-vm = { version = "0.11.13", path = "../vm" }

[lints]
workspace = true
