[package]
name = "stak-lzss"
version.workspace = true
edition.workspace = true
description = "LZSS compression for Stak Scheme"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
afl = "0.17.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true
