[package]
name = "stak-lzss"
version.workspace = true
edition.workspace = true
description = "LZSS compression for Stak Scheme"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
