[package]
name = "stak-lzss"
version.workspace = true
edition.workspace = true
description = "LZSS compression for Stak Scheme"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"

[lints]
workspace = true
