[package]
name = "stak-macro"
version.workspace = true
edition.workspace = true
description = "Macros to integrate Stak Scheme"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
cfg-elif = "0.6.5"
proc-macro2 = { version = "1.0.101", features = ["proc-macro"] }
quote = "1.0.40"
stak-compiler = { workspace = true }
stak-macro-util = { workspace = true }
syn = "2.0.106"

[dev-dependencies]
stak-device = { workspace = true }
stak-file = { workspace = true }
stak-process-context = { workspace = true }
stak-r7rs = { workspace = true }
stak-time = { workspace = true }
stak-vm = { workspace = true }

[features]
async = [
  "stak-compiler/async",
  "stak-device/async",
  "stak-file/async",
  "stak-process-context/async",
  "stak-r7rs/async",
  "stak-time/async",
  "stak-vm/async",
]
hot-reload = []

[lints]
workspace = true
