[package]
name = "stak-minifier"
version.workspace = true
edition.workspace = true
description = "Stak Scheme source code minifier"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
stak-configuration = { workspace = true }
stak-device = { workspace = true, features = ["std"] }
stak-file = { workspace = true }
stak-macro = { workspace = true }
stak-process-context = { workspace = true }
stak-r7rs = { workspace = true }
stak-time = { workspace = true }
stak-vm = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true
