[package]
name = "stak-minifier-macro"
version.workspace = true
edition.workspace = true
description = "Macros to minify Stak Scheme source codes"
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.101", features = ["proc-macro"] }
quote = "1.0.40"
stak-macro-util = { version = "0.10.38", path = "../macro-util" }
stak-minifier = { version = "0.10.38", path = "../minifier" }
syn = "2.0.106"

[lints]
workspace = true
