[package]
name = "stak-minifier-macro"
version.workspace = true
edition.workspace = true
description = "Macros to minify Stak Scheme source codes"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.101", features = ["proc-macro"] }
quote = "1.0.40"
stak-macro-util = { path = "../macro-util", version = "0.11.2" }
stak-minifier = { path = "../minifier", version = "0.11.2" }
syn = "2.0.106"

[lints]
workspace = true
