[package]
name = "stak-module"
description = "Modules in Stak Scheme"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
hmr = "0.2.3"

[lints]
workspace = true
