[package]
name = "stak-module"
version.workspace = true
edition.workspace = true
description = "Modules in Stak Scheme"
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hmr = "0.2.3"

[lints]
workspace = true
