[package]
name = "stak-native"
description = "Optimized primitives of native functions for Stak Scheme"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
async = ["stak-vm/async", "winter-maybe-async/async"]

[dependencies]
stak-vm = { version = "0.10.34", path = "../vm" }
winter-maybe-async = "0.13.1"

[lints]
workspace = true
